<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F4F4"
    tools:context=".ui.payment.PaymentMethod">

   <com.google.android.material.appbar.AppBarLayout
       android:id="@+id/appbar_layout"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:background="@android:color/transparent"
       app:elevation="0dp">

       <androidx.appcompat.widget.Toolbar
           android:id="@+id/toolbar"
           android:layout_width="match_parent"
           android:layout_height="?attr/actionBarSize">

           <ImageView
               android:id="@+id/ivBackArrow"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:padding="8dp"
               android:background="?selectableItemBackgroundBorderless"
               android:src="@drawable/ic_round_arrow_back_24" />

           <TextView
               style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:text="@string/payment" />
       </androidx.appcompat.widget.Toolbar>
   </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/appbar_layout"
        android:layout_marginTop="15dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/Payment_cv"
            android:layout_marginHorizontal="17dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/total_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/total_payment"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/totalPaymentTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="33dp"
                    android:text="@string/harga"
                    android:textColor="@color/primary"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="4dp"
                    android:layout_height="36dp"
                    android:layout_below="@+id/total_tv"
                    android:background="@drawable/custom_ractangle" />

                <TextView
                    android:id="@+id/underline"
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="73dp"
                    android:background="@drawable/underline" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="85dp"
                    android:layout_marginBottom="11dp"
                    android:text="@string/note_total_payment"
                    android:textColor="@color/text"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/payment_method_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="23dp"
            android:layout_marginTop="150dp"
            android:text="Payment Method"
            android:textColor="@color/title"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/creditCv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="17dp"
            app:cardCornerRadius="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/payment_method_tv">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/credit_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/credit_card"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/select_credit_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="9dp"
                    android:layout_marginEnd="36dp"
                    android:text="@string/select"
                    android:textColor="@color/primary"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="13dp"
                    android:layout_marginEnd="17dp"
                    android:src="@drawable/ic_angle" />

                <TextView
                    android:id="@+id/underline_credit_card"
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:layout_below="@id/credit_tv"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/underline" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/underline_credit_card"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="13dp"
                    android:layout_marginBottom="13dp"
                    android:src="@drawable/ic_visa" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/underline_credit_card"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="79dp"
                    android:layout_marginTop="13dp"
                    android:layout_marginBottom="13dp"
                    android:src="@drawable/ic_mastercard_logo" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/bankCv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="17dp"
            app:cardCornerRadius="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/creditCv">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/bank_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/bank_transfer"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/select_bank"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="9dp"
                    android:layout_marginEnd="36dp"
                    android:text="@string/select"
                    android:textColor="@color/primary"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="13dp"
                    android:layout_marginEnd="17dp"
                    android:src="@drawable/ic_angle" />

                <TextView
                    android:id="@+id/underline_bank"
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:layout_below="@id/bank_tv"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/underline" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/underline_bank"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="13dp"
                    android:layout_marginBottom="13dp"
                    android:src="@drawable/ic_bank_bni" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/underline_bank"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="79dp"
                    android:layout_marginTop="13dp"
                    android:layout_marginBottom="13dp"
                    android:src="@drawable/ic_cimb_niaga" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/retailCv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="17dp"
            app:cardCornerRadius="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bankCv">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/retail_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/retail_payment"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/select_retail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="9dp"
                    android:layout_marginEnd="36dp"
                    android:text="@string/select"
                    android:textColor="@color/primary"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="13dp"
                    android:layout_marginEnd="17dp"
                    android:src="@drawable/ic_angle" />

                <TextView
                    android:id="@+id/underline_retail"
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:layout_below="@id/retail_tv"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/underline" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/underline_retail"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="13dp"
                    android:layout_marginBottom="13dp"
                    android:src="@drawable/ic_alfamart" />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>